# fortran-string-utility-module

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  string_utility_module.f90
tests/: CMakeLists.txt  tests.f90
